# photoprotectionpy

./: README.md  pyproject.toml
.github/workflows/: main.yml
photoprotectionpy/: adjspf.py  criticalwave.py  uvapf.py
src/photoprotectionpy/: __init__.py  adjusted_spf.py  critical_wavelength.py  initial_spf.py  ispf.py  uv_exposuredose.py  uva_protectionfactor.py  uvdose.py
